feat: add apidocs title and description
